--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ code {
 }
 
 .app_title{
+  color: var(--clr-accent);
   text-shadow: 0 3px 10px var(--clr-accent);
 }
 
@@ -59,7 +60,7 @@ code {
   padding: 10px;
   margin: 1em;
   /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
-  box-shadow: 0 3px 10px var(--clr-accent);
+  box-shadow: 0 3px 10px var(--clr-accent), inset 0 3px 10px var(--clr-accent);
   text-align: center;
   border-radius: 10px;
   color: var(--clr-light);
@@ -126,7 +127,7 @@ input, select {
   padding: 1em 3em;
   margin: 1em;
   /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
-  box-shadow: 0 3px 10px var(--clr-accent);
+  box-shadow: 0 3px 10px var(--clr-accent), inset 0 3px 10px var(--clr-accent);
   border-radius: 10px;
   text-align: center;
   
